grammar.js
    source_file: $ => seq(
      repeat(choice(
        seq($._statement, optional($.comment), $._terminator),
        seq($.comment, $._terminator),
        $._terminator,
      )),
      optional(choice(seq($._statement, optional($.comment)), $.comment)),
    ),

    _terminator: $ => choice($._newline, ';'),
    _statement: $ => choice(
      $.if_statement,
      $.foreach_statement,
      $.while_statement,
      $.switch_statement,
      $.goto_statement,
      $.onintr_statement,
      $.break_statement,
      $.continue_statement,
      $.breaksw_statement,
      $.at_statement,
      $.quick_substitution_statement,
      $.label,
      $.command_list,
    ),

    command_list: $ => prec(-1, seq(
      $.and_or_command,
      repeat(seq('&', $.and_or_command)),
      optional('&'),
    )),

    and_or_command: $ => seq(
      $.and_command,
      repeat(seq('||', $.and_command)),
    ),

    and_command: $ => seq(
      $.pipeline,
      repeat(seq('&&', $.pipeline)),
    ),

    pipeline: $ => seq(
      $.command,
      repeat(seq(choice('|', '|&'), $.command)),
    ),

    command: $ => choice(
      $.parenthesized_command,
      $.source_statement,
      $.set_statement,
      $.exit_statement,
      $.alias_statement,
      alias($._one_line_if_statement, $.if_statement),
      $.repeat_statement,
      $.simple_command,
    ),

    simple_command: $ => prec.right(seq(
      repeat(field('redirection', $.redirection)),
      field('name', $.word),
      repeat(choice(
        field('argument', choice($.word, $.reserved_argument_word)),
        field('redirection', $.redirection),
      )),
    )),

    source_statement: $ => prec.right(seq(
      field('command', $.source_command),
      optional(field('option', $.source_option)),
      field('target', $.source_target),
      repeat(choice(
        field('argument', choice($.word, $.reserved_argument_word)),
        field('redirection', $.redirection),
      )),
    )),

    source_target: $ => $.word,
    source_command: _ => 'source',
    _one_line_if_statement: $ => prec.right(seq(
      'if', '(', optional(field('condition', $.expression)), ')',
      field('body', $.command),
    )),
    quick_substitution_statement: $ => prec(5, seq(
      $._quick_substitution_start,
      field('left', optional(alias(token.immediate(/[^\^\n]+/), $.substitution_lhs))),
      token.immediate('^'),
      field('right', optional(alias(token.immediate(/[^\^\n]+/), $.substitution_rhs))),
      optional(token.immediate('^')),
    )),

    word: $ => prec.right(seq(
      $._word_fragment,
      repeat($._immediate_word_fragment),
    )),

    _word_fragment: $ => choice(
      $.identifier,
      $.number,
      $.bare_word,
      $.escape_sequence,
      $.single_quoted_string,
      $.dollar_single_quoted_string,
      $.double_quoted_string,
      $.backtick_command_substitution,
      $.variable_substitution,
      $.literal_dollar,
      $.history_substitution,
      $.literal_bang,
      $.brace_pattern,
      $.glob_pattern,
      $.directory_stack_reference,
      $.job_spec,
    ),

    _immediate_word_fragment: $ => immediateWordFragment($, true),

    bare_word: _ => token(prec(-1, /[^\s#;|&<>(){}'"`$!\\*?]+/)),
    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
    number: _ => /[0-9]+/,
    escape_sequence: _ => token(seq('\\', /(.|\r?\n)/)),
    single_quoted_string: $ => seq("'", repeat(choice(token(/[^'!\\\n]+/), $.escape_sequence, $.history_substitution, $.literal_bang)), token.immediate("'")),
    dollar_single_quoted_string: $ => prec(2, seq($.literal_dollar, token.immediate(seq("'", repeat(choice(/[^'\\\n]+/, /\\./)), "'")))),
    double_quoted_string: $ => seq('"', repeat(choice(token(/[^"\\$`!\n]+/), $.escape_sequence, $.variable_substitution, $.literal_dollar, $.history_substitution, $.backtick_command_substitution)), token.immediate('"')),
    backtick_command_substitution: $ => seq(
      $._backtick_start,
      repeat(choice($._statement, $._terminator, $.comment)),
      $._backtick_end,
    ),
    variable_substitution: $ => prec.right(6, seq('$', choice(
      $._modifiable_variable_reference,
      $._nonmodifiable_variable_reference,
      seq(token.immediate('{'), choice($._modifiable_variable_reference, $._nonmodifiable_variable_reference), token.immediate('}')),
    ))),
    _modifiable_variable_reference: $ => prec.right(seq(
      choice(
        field('name', alias($._immediate_identifier, $.identifier)),
        field('name', alias($._immediate_number, $.number)),
        field('special', alias(token.immediate('*'), $.special_parameter)),
      ),
      optional(field('selector', $.subscript)),
      repeat(field('modifier', $.substitution_modifier)),
    )),
    _nonmodifiable_variable_reference: $ => choice(
      prec(2, seq(
        field('operator', alias(token.immediate(/[?#%]/), $.special_parameter)),
        field('name', choice(alias($._immediate_identifier, $.identifier), alias($._immediate_number, $.number))),
      )),
      prec(1, field('special', alias(token.immediate(choice('?<', /[?$!<_#]/)), $.special_parameter))),
    ),
    _immediate_identifier: _ => token.immediate(/[A-Za-z_][A-Za-z0-9_]*/),
    _immediate_number: _ => token.immediate(/[0-9]+/),
    special_parameter: _ => token(choice('?<', /[?$!<_#*]/)),
    subscript: $ => prec.right(3, seq(
      token.immediate(prec(2, '[')),
      choice(
        field('all', token.immediate('*')),
        field('start', $.selector_index),
        seq(field('start', $.selector_index), token.immediate('-'), optional(field('end', $.selector_index))),
        seq(token.immediate('-'), field('end', $.selector_index)),
      ),
      token.immediate(']'),
    )),
    selector_index: $ => choice(
      alias($._immediate_number, $.number),
      seq(token.immediate('$'), choice(alias($._immediate_identifier, $.identifier), alias($._immediate_number, $.number), alias(token.immediate('#'), $.special_parameter))),
    ),
    substitution_modifier: _ => token.immediate(prec(5, /:(?:[ag]*(?:[htrueulqx&]|s\/(?:\\.|[^/\n])*\/(?:\\.|[^/\n])*(?:\/)?))/)),
    history_substitution: $ => prec.right(6, seq('!', $._history_reference)),
    _history_reference: $ => prec.right(choice(
      seq(field('event', $.history_event), optional(field('designator', $.history_word_designator)), repeat(field('modifier', $.history_modifier))),
      seq(field('designator', $.history_word_designator), repeat(field('modifier', $.history_modifier))),
    )),
    history_event: $ => choice(
      alias(token.immediate(/[!#]/), $.history_event_name),
      alias(token.immediate(/-?[0-9]+/), $.history_event_name),
      alias(token.immediate(/[A-Za-z_][A-Za-z0-9_]*/), $.history_event_name),
      seq(token.immediate('?'), field('search', alias(token.immediate(/[^?\n]+/), $.history_search)), optional(token.immediate('?'))),
      seq(token.immediate('{'), field('name', alias(token.immediate(/[^{}\s\n]+/), $.history_event_name)), token.immediate('}')),
    ),
    history_word_designator: _ => token.immediate(prec(5, /:?(?:[0-9]+(?:-[0-9$]*)?|-[0-9$]+|[\^$%*]|[0-9]+\*|[0-9]+-)/)),
    history_modifier: _ => token.immediate(prec(5, /:(?:[ag]*(?:[htrueulqxp&]|s\/(?:\\.|[^/\n])*\/(?:\\.|[^/\n])*(?:\/)?))/)),
    history_event_name: _ => token.immediate(/[^\s:]+/),
    history_search: _ => token.immediate(/[^?\n]+/),
    glob_pattern: _ => token(/\^?[A-Za-z0-9_.\/-]*([*?]|\[[^\]\s\n]+\])[A-Za-z0-9_.\/*?\[\]-]*/),
    brace_pattern: $ => bracePattern($, '{'),
    directory_stack_reference: _ => token(/=(?:[0-9]+|-)/),
    job_spec: _ => token(seq('%', choice('%', '+', '-', /[0-9]+/, seq('?', /[^\s;|&<>(){}'"`]+/), /[A-Za-z_][A-Za-z0-9_-]*/))),
  }
});
